--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Samuel Fernando
+position: Quantum Data Engineer
+affiliation: Blueshift Brasil
+email: samuel.silva(at)com.br
 keywords: minimal academic
 google_scholar: https://scholar.google.com/
 github_link: https://github.com/yaoyao-liu/minimal-light
