--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: minimal academic
 google_scholar: https://scholar.google.com/
 github_link: https://github.com/yaoyao-liu/minimal-light
 linkedin: https://www.linkedin.com/
-avatar: ./assets/img/avatar.png
+avatar: https://images.app.goo.gl/WUThnbyw8yLbptQn9
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
