--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: minimal academic
 google_scholar: https://scholar.google.com/
 github_link: https://github.com/yaoyao-liu/minimal-light
 linkedin: https://www.linkedin.com/
-avatar: https://images.app.goo.gl/WUThnbyw8yLbptQn9
+avatar: https://media-exp1.licdn.com/dms/image/C4D03AQG8DmP8I3on9A/profile-displayphoto-shrink_800_800/0/1650156014093?e=1663804800&v=beta&t=jBAjl1ZPyNWHKJVVQZ6wQJBe4CpCRxqdrHRwymGH4y0
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
