--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Samuel Fernando
 position: Quantum Data Engineer
 affiliation: Blueshift Brasil
-email: samuel.silva(at)blueshift.com.br
+email: samuel.silva@blueshift.com.br
 keywords: minimal academic
 google_scholar: https://scholar.google.com/
 github_link: https://github.com/samfernano
