--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Samuel Fernando
-position: Quantum Data Engineer
+position: Quantum & Data Engineer
 affiliation: Blueshift Brasil
 email: samuel.silva@blueshift.com.br
 keywords: minimal academic
 google_scholar: https://scholar.google.com/
-github_link: https://github.com/samfernano
-linkedin: https://www.linkedin.com/
+github_link: https://github.com/samuelfernandofs
+linkedin: https://www.linkedin.com/in/samuelfernando2030/
 avatar: https://media-exp1.licdn.com/dms/image/C4D03AQG8DmP8I3on9A/profile-displayphoto-shrink_800_800/0/1650156014093?e=1663804800&v=beta&t=jBAjl1ZPyNWHKJVVQZ6wQJBe4CpCRxqdrHRwymGH4y0
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
