--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ position: Quantum & Data Engineer
 affiliation: Blueshift Brasil
 email: samuel.silva@blueshift.com.br
 keywords: minimal academic
-google_scholar: https://scholar.google.com/
+google_scholar: https://scholar.google.com/citations?hl=en&user=chszpPcAAAAJ
 github_link: https://github.com/samuelfernandofs
 linkedin: https://www.linkedin.com/in/samuelfernando2030/
 avatar: https://media-exp1.licdn.com/dms/image/C4D03AQG8DmP8I3on9A/profile-displayphoto-shrink_800_800/0/1650156014093?e=1663804800&v=beta&t=jBAjl1ZPyNWHKJVVQZ6wQJBe4CpCRxqdrHRwymGH4y0
