--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Samuel Fernando
-position: Quantum & Data Engineer
+position: Data Analytics Engineer
 affiliation: Blueshift Brasil
 email: samuel.silva@blueshift.com.br
 keywords: minimal academic
 google_scholar: https://scholar.google.com/citations?hl=en&user=chszpPcAAAAJ
 github_link: https://github.com/samuelfernandofs
 linkedin: https://www.linkedin.com/in/samuelfernando2030/
-avatar: https://photos.app.goo.gl/bnCFUrZXdLAHR4Zh8
+avatar: https://photos.app.goo.gl/bnCFUrZXdLAHR4Zh8 
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
