--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,25 @@ keywords: minimal academic
 google_scholar: https://scholar.google.com/citations?hl=en&user=chszpPcAAAAJ
 github_link: https://github.com/samuelfernandofs
 linkedin: https://www.linkedin.com/in/samuelfernando2030/
-avatar: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A 
 google_analytics: UA-111540567-4
-favicon: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A
-favicon_dark: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A
 
+# Images 
+avatar: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A 
+favicon: ./assets/img/favicon.png
+favicon_dark: ./assets/img/favicon-dark.png
+#favicon: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A
+#favicon_dark: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A
+
+# Footnotes
+footnote: Feel free to use my website's source code.
+footnote_link: https://github.com/yaoyao-liu/minimal-light
+
+# Analytics
+# Please remove the following lines about analytics services if you fork my project. 
+# Otherwise, the analytics information of your website will be recorded to my ClustrMaps accounts.
+clustrmaps_id: l3lesztPwCz-uXlzFI1Lt9SB3Ctz-pBQuMdYqnD0Ul8
+
+# General Data Protection Regulation (GDPR) information
+# If you don't need to add the GDPR information, you may remove the following lines.
+imprint: https://imprint.mpi-klsb.mpg.de/inf/people.mpi-inf.mpg.de/yaliu
+data_protection: https://data-protection.mpi-klsb.mpg.de/inf/people.mpi-inf.mpg.de/yaliu?lang=en
