--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ linkedin: https://www.linkedin.com/in/samuelfernando2030/
 google_analytics: UA-111540567-4
 
 # Images 
-avatar: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A 
+avatar: https://img.yliu.me/avatar.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 #favicon: https://photos.app.goo.gl/SNRkaE8u4s3U3N59A
