--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Basic Information 
 title: Samuel Fernando
-position: Ph.D. Candidate
-affiliation: Max Planck Institute for Informatics
-affiliation_link: https://www.mpi-inf.mpg.de/
-email: yaoyao.liu (at) mpi-inf.mpg.de
+position: Data Engineer Analyst
+affiliation: Blueshift Brazil
+affiliation_link: https://blueshift.com.br/
+email: samuel.silva (at) outlook.com.br
 
 # Search Engine Optimization (SEO)
-keywords: yaoyao liu, liu yaoyao, yaoyaoliu, liuyaoyao
-canonical: https://www.mpi-inf.mpg.de/~yaliu/
-description: Yaoyao Liu is a Ph.D. candidate at Max Planck Institute for Informatics. His research lies in meta-learning, incremental learning, and image generation.
+keywords: samuel fernando, samuel, samuelfernando, samuel fernando
+canonical: http://bio.samuelfernando.com.br/
+description: Samuel Fernando is a Data Analytics Engineer Ph.D. candidate at University of Sao Paulo. His research lies in quantum computing, quantum finance, optimization.
 
 # The option is used to enable the MPI Informatics template.
 enable_mpi_logo: true
@@ -17,11 +17,9 @@ enable_mpi_logo: true
 enable_last_update: false
 
 # Links
-google_scholar: https://scholar.google.com/citations?user=Uf9GqRsAAAAJ
-cv_link: https://files.yliu.me/Yaoyao_Liu_Curriculum_Vitae.pdf
-github_link: https://github.com/yaoyao-liu/
-linkedin: https://www.linkedin.com/in/liuyaoyao/
-twitter: https://twitter.com/YaoyaoLiu1/
+google_scholar: https://scholar.google.co.uk/citations?hl=en&user=chszpPcAAAAJ
+cv_link: https://www.linkedin.com/in/samuelfernando2030/
+github_link: https://github.com/samuelfernandofs
 
 # Images 
 avatar: https://img.yliu.me/avatar.jpg
@@ -30,7 +28,7 @@ favicon_dark: ./assets/img/favicon-dark.png
 
 # Footnotes
 footnote: Feel free to use my website's source code.
-footnote_link: https://github.com/yaoyao-liu/minimal-light
+footnote_link: https://github.com/samuelfernandofs/samuel.fernando
 
 # Analytics
 # Please remove the following lines about analytics services if you fork my project. 
