--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ enable_last_update: false
 
 # Links
 google_scholar: https://scholar.google.co.uk/citations?hl=en&user=chszpPcAAAAJ
-cv_link: https://www.linkedin.com/in/samuelfernando2030/
+linkedin: https://www.linkedin.com/in/samuelfernando2030/
 github_link: https://github.com/samuelfernandofs
 
 # Images 
