--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ enable_last_update: false
 google_scholar: https://scholar.google.co.uk/citations?hl=en&user=chszpPcAAAAJ
 linkedin: https://www.linkedin.com/in/samuelfernando2030/
 github_link: https://github.com/samuelfernandofs
+twitter: https://mobile.twitter.com/samuelf78246883
 
 # Images 
 avatar: https://img.yliu.me/avatar.jpg
