--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ github_link: https://github.com/samuelfernandofs
 twitter: https://mobile.twitter.com/samuelf78246883
 
 # Images 
-avatar: https://media.licdn.com/dms/image/C4D03AQG8DmP8I3on9A/profile-displayphoto-shrink_200_200/0/1650156014093?e=1676505600&v=beta&t=1DFDoBC8XnAWKoE20E3ClTj9mLRO1hfnMfjsDschDc4
-favicon: ./assets/img/favicon.png
-favicon_dark: ./assets/img/favicon-dark.png
+avatar: https://i.ibb.co/QvNsgDP/Whats-App-Image-2023-02-07-at-14-16-03.jpg
+#favicon: ./assets/img/favicon.png
+#favicon_dark: ./assets/img/favicon-dark.png
 
 # Footnotes
 footnote: Feel free to use my website's source code.
