--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Basic Information 
 title: Samuel Fernando
-position: Data Engineer Analyst
-affiliation: Blueshift Brazil
-affiliation_link: https://blueshift.com.br/
-email: samuel.silva (at) outlook.com.br
+position: Data Engineer 
+affiliation: F1RST Technology Santander
+affiliation_link: https://now.santander.com.br
+email: samuel.fernando(at)ufabc.edu.br
 
 # Search Engine Optimization (SEO)
 keywords: samuel fernando, samuel, samuelfernando, samuel fernando
